--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
 .product-card-container {
   padding: 1.5rem;
 }
@@ -19,7 +5,7 @@ code {
 .image-container {
   position: relative;
   width: 100%;
-  padding-bottom: 125%; /* 4:5 aspect ratio (5/4 = 1.25) */
+  padding-bottom: 125%;
   overflow: hidden;
 }
 
@@ -31,3 +17,8 @@ code {
   height: 100%;
   object-fit: contain;
 }
+
+.navbar-nav {
+  text-align: center;
+}
+
