--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,19 @@
   text-align: center;
 }
 
+.carousel-image {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  filter: blur(4px);
+}
+
+.image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 85%;
+  }
